[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "certbot-dns-hosterby"
version = "0.1.0"
description = "hoster.by DNS Authenticator plugin for Certbot"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [
  { name = "Alex Humi" }
]
keywords = ["certbot", "dns", "acme", "hoster.by", "letsencrypt"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Plugins",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Security",
  "Topic :: System :: Networking",
  "Topic :: System :: Systems Administration"
]
dependencies = [
  "certbot>=2.7",
  "requests>=2.28",
  "configobj>=5.0.6"
]

[project.optional-dependencies]
test = [
  "pytest>=8.0"
]

[project.urls]
Homepage = "https://github.com/YOUR_GITHUB_USERNAME/certbot-dns-hosterby"
Issues = "https://github.com/YOUR_GITHUB_USERNAME/certbot-dns-hosterby/issues"

[project.entry-points."certbot.plugins"]
dns-hosterby = "certbot_dns_hosterby:Authenticator"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
